--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.0",
+    "@mui/x-date-pickers": "^7.23.2",
     "@react-icons/all-files": "^4.1.0",
     "ant-design-vue": "^4.2.6",
     "cra-template": "1.2.0",
+    "dayjs": "^1.11.13",
     "mdb-ui-kit": "^8.1.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
